--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "i18n-yoast-components": "cross-env NODE_ENV=production babel node_modules/yoast-components --ignore node_modules/yoast-components/node_modules,tests/*Test.js --plugins=@wordpress/babel-plugin-makepot | shusher",
     "i18n-wordpress-seo": "cross-env NODE_ENV=production babel js/src --plugins=@wordpress/babel-plugin-makepot | shusher",
     "start": "grunt build:css && grunt webpack:buildDev && webpack-dev-server --config ./webpack/webpack.config.js --progress --env.environment=development",
-    "start-recalibration": "yarn start --env.recalibration=enabled"
+    "start-recalibration": "yarn start --env.recalibration=enabled",
+    "plop": "plop",
+    "plop-blocks": "node ./scripts/plop-code-generation/plop-all-blocks.js"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/js/tests/setupTests.js",
@@ -64,6 +66,7 @@
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.2",
+    "change-case": "^3.1.0",
     "copy-webpack-plugin": "^4.6.0",
     "cross-env": "^5.2.0",
     "envify": "^3.4.1",
@@ -98,6 +101,7 @@
     "i18n-calypso": "^1.8.4",
     "jest": "^23.3.0",
     "load-grunt-config": "^0.19.2",
+    "plop": "^2.2.0",
     "raf": "^3.4.0",
     "redux-logger": "^3.0.6",
     "request": "^2.88.0",
