--- a/.travis.yml
+++ b/.travis.yml
@@ -76,7 +76,7 @@ jobs:
         - grunt composer-artifact
       if: tag IS present
       before_install:
-        - nvm install node
+        - nvm install lts/*
         - curl -o- -L https://yarnpkg.com/install.sh | bash
         - export PATH=$HOME/.yarn/bin:$PATH
         - openssl aes-256-cbc -K $encrypted_06a9c1b95cfa_key -iv $encrypted_06a9c1b95cfa_iv -in ./deploy_keys/travis_dist_id_rsa.enc -out ./deploy_keys/travis_dist_id_rsa -d
