--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
   "devDependencies": {
     "@wordpress/babel-plugin-makepot": "^1.0.0",
     "@wordpress/babel-preset-default": "^1.1.3",
+    "@yoast/configuration-wizard": "^0.1.0",
     "@yoast/grunt-plugin-tasks": "^1.0.0",
+    "@yoast/style-guide": "^0.1.0",
     "algoliasearch": "^3.16.0",
     "autoprefixer": "^6.3.1",
     "babel-cli": "^6.26.0",
